--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/estilos.css" />
+    <link rel="stylesheet" href="./estilos.css" />
   </head>
   <body>
     <header>
